update the overflow issue in service page

--- a/frontend/src/assets/css/template.css
+++ b/frontend/src/assets/css/template.css
@@ -189,6 +189,8 @@
     overflow-y: scroll;
 }.left-portion{
     border:1px dashed #ccc;
+    overflow: hidden;
+    overflow-y: scroll;
 }
 #home .carousel-inner{
     height: 100%;
